--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,37 @@
-# Assuming the .travis.yml file is in the project directory, and there is a separate sub-directory for each service
+language: node_js
+node_js:
+  - 12
 
-# Build: docker build -t <optional: image name> <Dockerfile path>
-docker build -t udagram-api-feed ./udagram-api-feed
-docker build -t udagram-api-user ./udagram-api-user
-docker build -t udagram-api-frontend ./udagram-api-frontend
-docker build -t udagram-api-reverseproxy ./udagram-api-reverseproxy
+services:
+  - docker
 
-# Tag a local image with ID <Image ID> into the “mohamedghanem”'s repository "udagram-api-feed" with “v1”
-docker tag udagram-api-feed mohamedghanem/udagram-api-feed:v1
-docker tag udagram-api-user mohamedghanem/udagram-api-user:v1
-docker tag udagram-api-frontend mohamedghanem/udagram-api-frontend:v1
-docker tag udagram-api-reverseproxy mohamedghanem/udagram-api-reverseproxy:v1
+# Pre-testing installs
+install:
+  - echo "nothing needs to be installed"
 
-# Retrieve Credentials from Travis Environment Variables to be able to push
-echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+# Scripts to be run such as tests
+before_script:
+  - echo "no tests"
 
-# Push
-docker push mohamedghanem/udagram-api-feed:v1
-docker push mohamedghanem/udagram-api-user:v1
-docker push mohamedghanem/udagram-api-frontend:v1
-docker push mohamedghanem/udagram-api-reverseproxy:v1
+
+script:
+ # Build: docker build -t <optional: image name> <Dockerfile path>
+ - docker build -t udagram-api-feed ./udagram-api-feed
+ - docker build -t udagram-api-user ./udagram-api-user
+ - docker build -t udagram-api-frontend ./udagram-api-frontend
+ - docker build -t udagram-api-reverseproxy ./udagram-api-reverseproxy
+
+  # Tag a local image with ID <Image ID> into the “mohamedghanem”'s repository "udagram-api-feed" with “v1”
+ - docker tag udagram-api-feed mohamedghanem/udagram-api-feed:v1
+ - docker tag udagram-api-user mohamedghanem/udagram-api-user:v1
+ - docker tag udagram-api-frontend mohamedghanem/udagram-api-frontend:v1
+ - docker tag udagram-api-reverseproxy mohamedghanem/udagram-api-reverseproxy:v1
+
+after_success:
+ # Retrieve Credentials from Travis Environment Variables to be able to push
+ - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+ # Push
+ - docker push mohamedghanem/udagram-api-feed:v1
+ - docker push mohamedghanem/udagram-api-user:v1
+ - docker push mohamedghanem/udagram-api-frontend:v1
+ - docker push mohamedghanem/udagram-api-reverseproxy:v1
