--- a/.travis.yml
+++ b/.travis.yml
@@ -18,14 +18,14 @@ script:
  # Build: docker build -t <optional: image name> <Dockerfile path>
  - docker build -t udagram-api-feed ./udagram-api-feed
  - docker build -t udagram-api-user ./udagram-api-user
- - docker build -t udagram-api-frontend ./udagram-api-frontend
- - docker build -t udagram-api-reverseproxy ./udagram-api-reverseproxy
+ - docker build -t udagram-frontend ./udagram-frontend
+ - docker build -t udagram-reverseproxy ./udagram-reverseproxy
 
-  # Tag a local image with ID <Image ID> into the “mohamedghanem”'s repository "udagram-api-feed" with “v1”
+  # Tag a local image with ID <Image ID> into the “mohamedghanem”'s repository "udagram-*" with “v1”
  - docker tag udagram-api-feed mohamedghanem/udagram-api-feed:v1
  - docker tag udagram-api-user mohamedghanem/udagram-api-user:v1
- - docker tag udagram-api-frontend mohamedghanem/udagram-api-frontend:v1
- - docker tag udagram-api-reverseproxy mohamedghanem/udagram-api-reverseproxy:v1
+ - docker tag udagram-frontend mohamedghanem/udagram-frontend:v1
+ - docker tag udagram-reverseproxy mohamedghanem/udagram-reverseproxy:v1
 
 after_success:
  # Retrieve Credentials from Travis Environment Variables to be able to push
@@ -33,5 +33,5 @@ after_success:
  # Push
  - docker push mohamedghanem/udagram-api-feed:v1
  - docker push mohamedghanem/udagram-api-user:v1
- - docker push mohamedghanem/udagram-api-frontend:v1
- - docker push mohamedghanem/udagram-api-reverseproxy:v1
+ - docker push mohamedghanem/udagram-frontend:v1
+ - docker push mohamedghanem/udagram-reverseproxy:v1
