--- a/kubernetes/env-configmap.yml
+++ b/kubernetes/env-configmap.yml
@@ -7,7 +7,7 @@ data:
   JWT_SECRET: testing
   POSTGRES_DB: postgres
   POSTGRES_HOST: mypgdb1998.czky3jsl4ase.us-east-1.rds.amazonaws.com
-  URL: http://a4881dc2e8b5245729edc0f8b1d03137-1409320385.us-east-1.elb.amazonaws.com
+  URL: http://a4881dc2e8b5245729edc0f8b1d03137-1409320385.us-east-1.elb.amazonaws.com:8100
   ACCESS_CONTROL_ALLOW_ORIGIN: "*"
 metadata:
   name: env-config
