--- a/kubernetes - Copy/env-secret.yml
+++ b/kubernetes - Copy/env-secret.yml
@@ -4,5 +4,5 @@ metadata:
   name: env-secret
 type: Opaque
 data:
-  POSTGRES_USERNAME: BASE64 PG username
-  POSTGRES_PASSWORD: BASE64 PG password
+  POSTGRES_USERNAME: <pg uname>
+  POSTGRES_PASSWORD: <pg pwd>
