--- a/kubernetes - Copy/env-configmap.yml
+++ b/kubernetes - Copy/env-configmap.yml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: ConfigMap
 data:
-  AWS_BUCKET: arn:aws:s3:::<bucket name>
+  AWS_BUCKET: arn:aws:s3:::<>bucket
   AWS_PROFILE: default
   AWS_REGION: us-east-1
   JWT_SECRET: testing
   POSTGRES_DB: postgres
-  POSTGRES_HOST: <db name>.us-east-1.rds.amazonaws.com
-  URL: http://<public ip>.us-east-1.elb.amazonaws.com:8100
-  ACCESS_CONTROL_ALLOW_ORIGIN: "*"
+  POSTGRES_HOST: <host>
+  URL: <url>
 metadata:
   name: env-config
