--- a/kubernetes - Copy/backend-user-deployment.yml
+++ b/kubernetes - Copy/backend-user-deployment.yml
@@ -33,6 +33,11 @@ spec:
             configMapKeyRef:
               name: env-config
               key: AWS_BUCKET
+        - name: URL
+          valueFrom:
+            configMapKeyRef:
+              name: env-config
+              key: URL
         - name: AWS_PROFILE
           valueFrom:
             configMapKeyRef:
