--- a/kubernetes/env-secret.yml
+++ b/kubernetes/env-secret.yml
@@ -4,5 +4,5 @@ metadata:
   name: env-secret
 type: Opaque
 data:
-  POSTGRES_USERNAME: <pg uname>
-  POSTGRES_PASSWORD: <pg pwd>
+  POSTGRES_USERNAME: bW9oYW1lZGdoMTk5OA==
+  POSTGRES_PASSWORD: MTIzNDU2Nzg=
