--- a/kubernetes/aws-secret.yml
+++ b/kubernetes/aws-secret.yml
@@ -4,4 +4,4 @@ metadata:
   name: aws-secret
 type: Opaque
 data:
-  credentials: <>
+  credentials: W2RlZmF1bHRdCmF3c19hY2Nlc3Nfa2V5X2lkID0gQUtJQTZNRTNTRFEyS0VXVktVWEcKYXdzX3NlY3JldF9hY2Nlc3Nfa2V5ID0gNjBLanFHd0JQRU94eE9PWXV3ZjVJdHYxUVIrSUMxSEk5aElDZ09qWg==
