--- a/kubernetes/env-configmap.yml
+++ b/kubernetes/env-configmap.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: ConfigMap
 data:
-  AWS_BUCKET: <>
+  AWS_BUCKET: arn:aws:s3:::u3bucketmg1998
   AWS_PROFILE: default
   AWS_REGION: us-east-1
   JWT_SECRET: testing
   POSTGRES_DB: postgres
-  POSTGRES_HOST: <>
-  URL: <>
+  POSTGRES_HOST: mypgdb1998.czky3jsl4ase.us-east-1.rds.amazonaws.com
+  URL: http://a17c019be828745d8bf362c5881c6161-561312979.us-east-1.elb.amazonaws.com:8100
 metadata:
   name: env-config
